fixed some css here and there

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
     <div class="container-fluid">
 
       <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -39,13 +39,13 @@
             <a class="nav-link fs-5 active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5" href="about.html">About</a>
+            <a class="nav-link fs-5" href="./about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5" href="contact.html">Contact Us</a>
+            <a class="nav-link fs-5" href="./contact.html">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5" href="login.html">Login</a>
+            <a class="nav-link fs-5" href="./login.html">Login</a>
           </li>
         </ul>
       </div>
@@ -184,7 +184,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4 mx-5 mb-4">
     <div class="col">
       <div class="card p-0">
-        <img src="Images\Cards\Summer_season.png" class="card-img-top" alt="Summer Trek Thumbnail">
+        <img src="Images\Cards\Summer_season.png" class="card-img-top rounded-1" alt="Summer Trek Thumbnail">
         <div class="card-img-overlay">
           <div class="position-absolute top-50 start-50 translate-middle">
             <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg">Summer</button></p>
@@ -195,7 +195,7 @@
 
     <div class="col">
       <div class="card p-0">
-        <img src="Images\Cards\rainy_season.jpeg" class="card-img-top" alt="Monsoon Trek Thumbnail">
+        <img src="Images\Cards\rainy_season.jpeg" class="card-img-top rounded-1" alt="Monsoon Trek Thumbnail">
         <div class="card-img-overlay">
           <div class="position-absolute top-50 start-50 translate-middle">
             <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg">Monsoon</button></p>
@@ -206,7 +206,7 @@
 
     <div class="col">
       <div class="card p-0">
-        <img src="Images\Cards\winter_season.png" class="card-img-top" alt="Winter Trek Thumbnail">
+        <img src="Images\Cards\winter_season.png" class="card-img-top rounded-1" alt="Winter Trek Thumbnail">
         <div class="card-img-overlay">
           <div class="position-absolute top-50 start-50 translate-middle">
             <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg">Winter</button></p>
