--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
     <div class="container-fluid">
 
       <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -36,16 +36,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
           <li class="nav-item">
-            <a class="nav-link fs-5" aria-current="page" href="#">Home</a>
+            <a class="nav-link fs-5" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5" href="about.html">About</a>
+            <a class="nav-link fs-5" href="./about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5 active" href="contact.html">Contact Us</a>
+            <a class="nav-link fs-5 active" href="#">Contact Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link fs-5" href="login.html">Login</a>
+            <a class="nav-link fs-5" href="./login.html">Login</a>
           </li>
         </ul>
       </div>
