--- a/home.html
+++ b/home.html
@@ -222,7 +222,8 @@
   <div class="container">
     <footer class="py-5">
       <div class="row">
-        <div class="col-6 col-md-6 mb-3">
+        <!-- Section Breadcrumb -->
+        <div class="col-md-6 mb-3">
           <h5>Section</h5>
           <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -241,7 +242,9 @@
             </ol>
           </nav>
         </div>
+        <!-- /Section Breadcrumb -->
 
+        <!-- Newsletter -->
         <div class="col-md-5 offset-md-1 mb-3">
           <form>
             <h5>Subscribe to our newsletter</h5>
@@ -253,10 +256,13 @@
             </div>
           </form>
         </div>
+        <!-- /Newsletter -->
       </div>
-
+      
+      <!-- Copyright -->
       <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-        <p>Copyright © 2023 by TrekToppers | Developed by Aarjav Jani</p>
+        <p>Copyright © 2023 by TrekToppers</p>
+        <p>Developed by Aarjav Jani</p>
         <ul class="list-unstyled d-flex">
           <li class="ms-3">
             <a class="link-body-emphasis" href="#"> <!-- Link to our twitter handle-->
@@ -275,14 +281,15 @@
           </li>
         </ul>
       </div>
+      <!-- Copyright -->
     </footer>
   </div>
   <!-- /Footer -->
-
+  
   <!-- Bootstrap JS -->
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- /Bootstrap JS -->
-
+  
 </body>
 
 </html>
