--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="./style/season-cards.css">
   <link rel="stylesheet" href="./style/navbar-link.css">
   <link rel="stylesheet" href="./style/navbar-toggler.css">
+  <link rel="stylesheet" href="./style/footer-media-handles.css">
 
   <title>TrekToppers</title>
 </head>
@@ -26,8 +27,9 @@
   <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
     <div class="container-fluid">
 
-      <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
@@ -258,38 +260,45 @@
         </div>
         <!-- /Newsletter -->
       </div>
-      
-      <!-- Copyright -->
+
       <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-        <p>Copyright © 2023 by TrekToppers</p>
-        <p>Developed by Aarjav Jani</p>
-        <ul class="list-unstyled d-flex">
-          <li class="ms-3">
-            <a class="link-body-emphasis" href="#"> <!-- Link to our twitter handle-->
-              <i class="bi bi-twitter text-primary fs-4"></i>
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="link-body-emphasis" href="#"> <!-- Link to our instagram page-->
-              <i class="bi bi-instagram fs-4"></i>
-            </a>
-          </li>
-          <li class="ms-3">
-            <a class="link-body-emphasis" href="#"> <!-- Link to our facebook page-->
-              <i class="bi bi-facebook text-primary fs-4"></i>
-            </a>
-          </li>
-        </ul>
+        <!-- Copyright -->
+        <div class="col-md-6">
+          Copyright © 2023 by TrekToppers <br>
+          Developed by Aarjav Jani
+        </div>
+        <!-- /Copyright -->
+
+        <!-- Media Handles -->
+        <div class="col-md-6 position-relative">
+          <ul class="list-unstyled d-flex position-absolute end-0 left-on-small">
+            <li class="ms-3">
+              <a class="link-body-emphasis" href="#"> <!-- Link to our twitter handle-->
+                <i class="bi bi-twitter text-primary fs-4 inc-fs-on-small"></i>
+              </a>
+            </li>
+            <li class="ms-3">
+              <a class="link-body-emphasis" href="#"> <!-- Link to our instagram page-->
+                <i class="bi bi-instagram fs-4 inc-fs-on-small"></i>
+              </a>
+            </li>
+            <li class="ms-3">
+              <a class="link-body-emphasis" href="#"> <!-- Link to our facebook page-->
+                <i class="bi bi-facebook text-primary fs-4 inc-fs-on-small"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- /Media Handles -->
       </div>
-      <!-- Copyright -->
     </footer>
   </div>
   <!-- /Footer -->
-  
+
   <!-- Bootstrap JS -->
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- /Bootstrap JS -->
-  
+
 </body>
 
 </html>
