--- a/home.html
+++ b/home.html
@@ -43,13 +43,11 @@
           <li class="nav-item">
             <a class="nav-link fs-5" href="./about.html">About</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5" href="./contact.html">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5" href="./login.html">Login</a>
-          </li>
         </ul>
+      </div>
+
+      <div class="d-flex fw-bold">
+        <a class="nav-link fs-5 link-light" href="./login.html">Login</a>
       </div>
 
     </div>
@@ -57,38 +55,52 @@
   <!-- /Navbar -->
 
   <!-- Carousel -->
-  <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div id="carousel" class="carousel slide" data-bs-ride="carousel">
+    <!-- carousel indicators -->
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
+        aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
+      <button type="button" data-bs-target="#carousel" data-bs-slide-to="7" aria-label="Slide 8"></button>
+    </div>
+    <!-- /carousel indicators -->
+
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Images\Carousel\p1.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p1.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p2.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p2.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p3.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p3.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p4.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p4.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p5.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p5.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p6.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p6.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p7.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p7.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
       <div class="carousel-item">
-        <img src="Images\Carousel\p8.jpeg" class="d-block w-100" alt="..." data-bs-interval="10000">
+        <img src="Images\Carousel\p8.jpeg" class="d-block w-100" alt="..." data-bs-interval="8000">
       </div>
 
     </div>
@@ -108,11 +120,11 @@
   <div class="row row-cols-1 row-cols-md-4 g-3 mx-5">
 
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="Chadar-Trek.html">
           <img src="Images\Cards\chadar trek.png" class="card-img-top" alt="Trek Thumbnail">
         </a>
-        <div class="card-body ">
+        <div class="card-body">
           <h5 class="card-title">Chadar Trek</h5>
           <p><i class="bi bi-geo-alt"></i>Laddakh, India</p><br>
           <ul class="list-group list-group-horizontal">
@@ -126,7 +138,7 @@
     </div>
 
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="Kedarkantha-Trek.html">
           <img src="Images\Cards\Kedarkantha-Peak.jpg" class="card-img-top" alt="Trek Thumbnail">
         </a>
@@ -144,7 +156,7 @@
     </div>
 
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="Valley-of-Flowers-Trek.html">
           <img src="Images\Cards\valley of flowers.jpeg" class="card-img-top" alt="Trek Thumbnail">
         </a>
@@ -162,7 +174,7 @@
     </div>
 
     <div class="col">
-      <div class="card">
+      <div class="card h-100">
         <a href="Girnar-Trek.html">
           <img src="Images\Cards\girnar.jpg" class="card-img-top" alt="Trek Thumbnail">
         </a>
