Made Season Page

--- a/Girnar-Trek.html
+++ b/Girnar-Trek.html
@@ -20,35 +20,33 @@
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
-    <div class="container-fluid">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-light navbar-light" data-bs-theme="dark">
+      <div class="container-fluid">
 
-      <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <div class="bar"></div>
-        <div class="bar"></div>
-        <div class="bar"></div>
-      </button>
+          <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button"
+              data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar"></div>
+          </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
-          <li class="nav-item">
-            <a class="nav-link fs-5" aria-current="page" href="./home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5" href="./about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5" href="./contact.html">Contact Us</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fs-5" href="./login.html">Login</a>
-          </li>
-        </ul>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-bold">
+                  <li class="nav-item">
+                      <a class="nav-link fs-5" aria-current="page" href="./home.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link fs-5" href="./about.html">About</a>
+                  </li>
+                  <li class="nav-item position position-fixed end-0 me-2">
+                      <a class="nav-link fs-5 link-light" href="./login.html">Login</a>
+                  </li>
+              </ul>
+          </div>
+
       </div>
-    </div>
   </nav>
   <!-- /Navbar -->
 
