--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-dark navbar-light" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md sticky-top bg-body-secondary bg-light navbar-light" data-bs-theme="dark">
     <div class="container-fluid">
 
       <button class="navbar-toggler" onclick="this.classList.toggle('change')" type="button" data-bs-toggle="collapse"
@@ -43,11 +43,10 @@
           <li class="nav-item">
             <a class="nav-link fs-5" href="./about.html">About</a>
           </li>
+          <li class="nav-item position position-fixed end-0 me-2">
+            <a class="nav-link fs-5 link-light" href="./login.html">Login</a>
+          </li>
         </ul>
-      </div>
-
-      <div class="d-flex fw-bold">
-        <a class="nav-link fs-5 link-light" href="./login.html">Login</a>
       </div>
 
     </div>
@@ -105,11 +104,11 @@
 
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev-icon visually-hidden" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="carousel-control-next-icon visually-hidden" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
@@ -201,7 +200,11 @@
         <img src="Images\Cards\Summer_season.png" class="card-img-top rounded-1" alt="Summer Trek Thumbnail">
         <div class="card-img-overlay">
           <div class="position-absolute top-50 start-50 translate-middle">
-            <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg">Summer</button></p>
+            <!-- <button type="button" class="btn btn-outline-dark btn-lg" onclick="window.open('./Season.html',_self)"><p class="card-text">Summer</p></button> -->
+            <p class="card-text">
+              <button type="button" class="btn btn-outline-dark btn-lg" onclick="window.open('./Season.html','_self')">
+                Summer</button>
+            </p>
           </div>
         </div>
       </div>
@@ -212,7 +215,8 @@
         <img src="Images\Cards\rainy_season.jpeg" class="card-img-top rounded-1" alt="Monsoon Trek Thumbnail">
         <div class="card-img-overlay">
           <div class="position-absolute top-50 start-50 translate-middle">
-            <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg">Monsoon</button></p>
+            <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg"
+                onclick="window.open('./Season.html','_self')">Monsoon</button></p>
           </div>
         </div>
       </div>
@@ -223,7 +227,8 @@
         <img src="Images\Cards\winter_season.png" class="card-img-top rounded-1" alt="Winter Trek Thumbnail">
         <div class="card-img-overlay">
           <div class="position-absolute top-50 start-50 translate-middle">
-            <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg">Winter</button></p>
+            <p class="card-text"><button type="button" class="btn btn-outline-dark btn-lg"
+                onclick="window.open('./Season.html','_self')">Winter</button></p>
           </div>
         </div>
       </div>
